# CSD_Project

./: Makefile
src/m-explore-ros2/explore/config/: params.yaml  params_costmap.yaml
src/m-explore-ros2/map_merge/config/: params.yaml
src/merge_map/merge_map/: merge_map.py
src/rosbot_xl_description/urdf/: rosbot_xl.urdf.xacro
src/sam_bot_nav2_gz/: CMakeLists.txt
src/sam_bot_nav2_gz/config/: diff_drive_controller_2.yaml  diff_drive_controller_velocity.yaml
src/sam_bot_nav2_gz/launch/: complete_navigation.launch.py  display.launch.py
src/sam_bot_nav2_gz/scripts/battery_state/: battery_state_pub.py
src/sam_bot_nav2_gz/src/description/: sam_bot_2.urdf  (+1 more)
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: controller_manager.yaml  controller_manager2.yaml  diff_drive_controller_velocity.yaml  ukf.yaml
src/simulation/env-hooks/: simulation.sh.in
src/simulation/launch/: pippo-loc.launch.py  pippo.launch.py  pluto.launch.py  sim.launch.py
src/simulation/models/robot/: metadata.pbtxt  model.sdf
src/simulation/models/robot_old/: model.sdf
src/simulation/rviz/: simulation.rviz
src/simulation/urdf/: pippo.urdf  pluto.urdf  sam_bot.urdf
src/simulation/worlds/: cave.world  empty.sdf  track_drive_test.world
src/tutorial_pkg/: CMakeLists.txt  package.xml
src/tutorial_pkg/config/: explore.yaml  slam.yaml
src/tutorial_pkg/launch/: explore.launch.py  navigation.launch.py  sim.launch.py  slam.launch.py
src/tutorial_pkg/maps/: map.pgm  map.yaml
src/tutorial_pkg/rviz/: explore.rviz
src/tutorial_pkg/worlds/: house.world  world.world
(+2 files in other folders)
